// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Public site extraction snapshots > example.com can be mapped into Pulse tokens > example.com-css-head 1`] = `
"#_pi_surveyWidgetContainer {
  --pi-color-primary: #348;
  --pi-color-primary-hover: #1b2869;
  --pi-color-primary-active: #090a4c;
  --pi-color-secondary: #eee;
  --pi-color-text: #000;
  --pi-color-"
`;

exports[`Public site extraction snapshots > example.com can be mapped into Pulse tokens > example.com-report-sample 1`] = `
{
  "backgroundColors.closeBottombar": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeBottombar",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeBottombarHover": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeBottombarHover",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeCustom": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeCustom",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeCustomHover": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeCustomHover",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeDefault": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeDefault",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeDefaultHover": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeDefaultHover",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeDocked": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeDocked",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeDockedHover": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeDockedHover",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeFullscreen": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeFullscreen",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeInline": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeInline",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeInlineHover": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeInlineHover",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeTopbar": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeTopbar",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.widgetBottombar": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.widgetBottombar",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.widgetContainer": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.widgetContainer",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.widgetCustom": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.widgetCustom",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.widgetDefault": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.widgetDefault",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.widgetDocked": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.widgetDocked",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.widgetFullscreen": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.widgetFullscreen",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.widgetInline": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.widgetInline",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.widgetTopbar": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.widgetTopbar",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
}
`;

exports[`Public site extraction snapshots > example.com can be mapped into Pulse tokens > example.com-theme 1`] = `
{
  "backgroundColors": {
    "answersContainer": "rgba(0, 0, 0, 0)",
    "answersContainerCustom": "rgba(0, 0, 0, 0)",
    "answersContainerCustomFull": "rgba(0, 0, 0, 0)",
    "answersContainerFree": "rgba(0, 0, 0, 0)",
    "answersContainerMulti": "rgba(0, 0, 0, 0)",
    "answersContainerSingle": "rgba(0, 0, 0, 0)",
    "branding": "rgba(0, 0, 0, 0)",
    "brandingCustom": "rgba(0, 0, 0, 0)",
    "closeBottombar": "rgba(0, 0, 0, 0)",
    "closeBottombarHover": "rgba(0, 0, 0, 0)",
    "closeCustom": "rgba(0, 0, 0, 0)",
    "closeCustomHover": "rgba(0, 0, 0, 0)",
    "closeDefault": "rgba(0, 0, 0, 0)",
    "closeDefaultHover": "rgba(0, 0, 0, 0)",
    "closeDocked": "rgba(0, 0, 0, 0)",
    "closeDockedHover": "rgba(0, 0, 0, 0)",
    "closeFullscreen": "rgba(0, 0, 0, 0)",
    "closeFullscreenHover": "rgba(0, 0, 0, 0)",
    "closeInline": "rgba(0, 0, 0, 0)",
    "closeInlineHover": "rgba(0, 0, 0, 0)",
    "closeTopbar": "rgba(0, 0, 0, 0)",
    "closeTopbarHover": "rgba(0, 0, 0, 0)",
    "contentContainerCustom": "rgba(0, 0, 0, 0)",
    "contentContainerCustomFull": "rgba(0, 0, 0, 0)",
    "contentContainerCustomFullMobi": "rgba(0, 0, 0, 0)",
    "contentContainerCustomMobi": "rgba(0, 0, 0, 0)",
    "contentContainerDefault": "rgba(0, 0, 0, 0)",
    "contentContainerDefaultMobi": "rgba(0, 0, 0, 0)",
    "contentContainerFree": "rgba(0, 0, 0, 0)",
    "contentContainerFreeMobi": "rgba(0, 0, 0, 0)",
    "contentContainerMulti": "rgba(0, 0, 0, 0)",
    "contentContainerMultiMobi": "rgba(0, 0, 0, 0)",
    "contentContainerSingle": "rgba(0, 0, 0, 0)",
    "contentContainerSingleMobi": "rgba(0, 0, 0, 0)",
    "freeTextQuestionFieldContainer": "rgba(0, 0, 0, 0)",
    "invitation": "rgba(0, 0, 0, 0)",
    "multiCheckboxOuter": "rgba(0, 0, 0, 0)",
    "multiCheckboxOuterHover": "rgba(0, 0, 0, 0)",
    "multiChoiceAnswerAll": "rgba(0, 0, 0, 0)",
    "multiChoiceAnswerAllHover": "rgba(0, 0, 0, 0)",
    "questionCustom": "rgba(0, 0, 0, 0)",
    "questionCustomFull": "rgba(0, 0, 0, 0)",
    "questionCustomFullMobi": "rgba(0, 0, 0, 0)",
    "questionCustomMobi": "rgba(0, 0, 0, 0)",
    "questionFree": "rgba(0, 0, 0, 0)",
    "questionFreeMobi": "rgba(0, 0, 0, 0)",
    "questionMulti": "rgba(0, 0, 0, 0)",
    "questionMultiMobi": "rgba(0, 0, 0, 0)",
    "questionSingle": "rgba(0, 0, 0, 0)",
    "questionSingleMobi": "rgba(0, 0, 0, 0)",
    "radioButtonInnerHover": "rgba(0, 0, 0, 0)",
    "radioButtonOuter": "rgba(0, 0, 0, 0)",
    "radioButtonOuterHover": "rgba(0, 0, 0, 0)",
    "singleChoiceAnswerAll": "rgba(0, 0, 0, 0)",
    "singleChoiceAnswerAllHover": "rgba(0, 0, 0, 0)",
    "submitButton": "rgba(0, 0, 0, 0)",
    "submitButtonHover": "rgba(0, 0, 0, 0)",
    "thankYou": "rgba(0, 0, 0, 0)",
    "widgetBottombar": "rgba(0, 0, 0, 0)",
    "widgetContainer": "rgba(0, 0, 0, 0)",
    "widgetCustom": "rgba(0, 0, 0, 0)",
    "widgetDefault": "rgba(0, 0, 0, 0)",
    "widgetDocked": "rgba(0, 0, 0, 0)",
    "widgetFullscreen": "rgba(0, 0, 0, 0)",
    "widgetInline": "rgba(0, 0, 0, 0)",
    "widgetTopbar": "rgba(0, 0, 0, 0)",
  },
  "borderColors": {
    "multiCheckboxCheckmark": "rgb(51, 68, 136)",
    "multiCheckboxCheckmarkHover": "rgb(51, 68, 136)",
    "multiCheckboxOuter": "rgb(51, 68, 136)",
    "multiCheckboxOuterHover": "rgb(51, 68, 136)",
    "multiChoiceAnswerEach": "rgb(51, 68, 136)",
    "multiChoiceAnswerEachHover": "rgb(51, 68, 136)",
    "radioButtonInnerHover": "rgb(51, 68, 136)",
    "radioButtonOuter": "rgb(51, 68, 136)",
    "radioButtonOuterHover": "rgb(51, 68, 136)",
    "singleChoiceAnswerEach": "rgb(51, 68, 136)",
    "singleChoiceAnswerEachHover": "rgb(51, 68, 136)",
    "submitButton": "rgb(51, 68, 136)",
    "submitButtonHover": "rgb(51, 68, 136)",
    "widgetBottombar": "rgb(51, 68, 136)",
    "widgetContainer": "rgb(51, 68, 136)",
    "widgetCustom": "rgb(51, 68, 136)",
    "widgetDefault": "rgb(51, 68, 136)",
    "widgetDocked": "rgb(51, 68, 136)",
    "widgetDockedMobi": "rgb(51, 68, 136)",
    "widgetFullscreen": "rgb(51, 68, 136)",
    "widgetInline": "rgb(51, 68, 136)",
    "widgetTopbar": "rgb(51, 68, 136)",
    "widgetTopbarMobi": "rgb(51, 68, 136)",
  },
  "borderRadiuses": {
    "closeBottombar": "0px",
    "closeCustom": "0px",
    "closeDefault": "0px",
    "closeDocked": "0px",
    "closeFullscreen": "0px",
    "closeInline": "0px",
    "closeTopbar": "0px",
    "multiCheckboxCheckmark": "0px",
    "multiCheckboxOuter": "0px",
    "multiChoiceAnswerEach": "0px",
    "multiChoiceAnswerEachHover": "0px",
    "singleChoiceAnswerEach": "0px",
    "singleChoiceAnswerEachHover": "0px",
    "submitButton": "0px",
    "widgetBottombar": "0px",
    "widgetContainer": "0px",
    "widgetCustom": "0px",
    "widgetDefault": "0px",
    "widgetDocked": "0px",
    "widgetDockedMobi": "0px",
    "widgetFullscreen": "0px",
    "widgetInline": "0px",
    "widgetTopbar": "0px",
    "widgetTopbarMobi": "0px",
  },
  "borderStyles": {
    "multiCheckboxCheckmark": "rgb(51, 68, 136)",
    "multiCheckboxOuter": "rgb(51, 68, 136)",
    "multiChoiceAnswerEach": "rgb(51, 68, 136)",
    "multiChoiceAnswerEachHover": "rgb(51, 68, 136)",
    "radioButtonInnerHover": "rgb(51, 68, 136)",
    "radioButtonOuter": "normal",
    "singleChoiceAnswerEach": "rgb(51, 68, 136)",
    "singleChoiceAnswerEachHover": "rgb(51, 68, 136)",
    "submitButton": "rgb(51, 68, 136)",
    "widgetBottombar": "normal",
    "widgetContainer": "normal",
    "widgetCustom": "rgb(51, 68, 136)",
    "widgetDefault": "rgb(51, 68, 136)",
    "widgetDocked": "rgb(51, 68, 136)",
    "widgetDockedMobi": "normal",
    "widgetFullscreen": "rgb(51, 68, 136)",
    "widgetInline": "normal",
    "widgetTopbar": "0px",
    "widgetTopbarMobi": "normal",
  },
  "borderWidths": {
    "multiCheckboxCheckmark": "0px",
    "multiCheckboxOuter": "0px",
    "multiChoiceAnswerAll": "0px",
    "multiChoiceAnswerAllHover": "0px",
    "multiChoiceAnswerEach": "0px",
    "multiChoiceAnswerEachHover": "0px",
    "radioButtonInnerHover": "0px",
    "radioButtonOuter": "normal",
    "singleChoiceAnswerAll": "0px",
    "singleChoiceAnswerAllHover": "0px",
    "singleChoiceAnswerEach": "0px",
    "singleChoiceAnswerEachHover": "0px",
    "submitButton": "0px",
    "widgetBottombar": "normal",
    "widgetContainer": "normal",
    "widgetCustom": "0px",
    "widgetDefault": "0px",
    "widgetDocked": "0px",
    "widgetDockedMobi": "normal",
    "widgetFullscreen": "normal",
    "widgetInline": "normal",
    "widgetTopbar": "0px",
    "widgetTopbarMobi": "normal",
  },
  "boxShadows": {
    "widgetBottombar": "none",
    "widgetDocked": "none",
    "widgetFullscreen": "none",
    "widgetInline": "none",
    "widgetTopbar": "none",
  },
  "cursors": {},
  "fontColors": {
    "answerScale": "normal",
    "closeBottombar": "rgb(51, 68, 136)",
    "closeBottombarHover": "normal",
    "closeCustom": "rgb(51, 68, 136)",
    "closeCustomHover": "normal",
    "closeDefault": "rgb(51, 68, 136)",
    "closeDefaultHover": "normal",
    "closeDocked": "rgb(51, 68, 136)",
    "closeDockedHover": "normal",
    "closeFullscreen": "rgb(51, 68, 136)",
    "closeFullscreenHover": "normal",
    "closeInline": "rgb(51, 68, 136)",
    "closeInlineHover": "normal",
    "closeTopbar": "rgb(51, 68, 136)",
    "closeTopbarHover": "normal",
    "invitation": "system-ui, sans-serif",
    "mediumFont": "system-ui, sans-serif",
    "mediumFontHover": "normal",
    "questionCustom": "system-ui, sans-serif",
    "questionCustomFull": "system-ui, sans-serif",
    "questionFree": "16px",
    "questionHeader": "0px",
    "questionMulti": "system-ui, sans-serif",
    "questionSingle": "normal",
    "smallFont": "system-ui, sans-serif",
    "smallFontHover": "system-ui, sans-serif",
    "submitButton": "normal",
    "submitButtonHover": "normal",
    "thankYou": "rgb(238, 238, 238)",
  },
  "fontFamilies": {
    "answerScale": "system-ui, sans-serif",
    "closeBottombar": "system-ui, sans-serif",
    "closeCustom": "system-ui, sans-serif",
    "closeDefault": "rgb(51, 68, 136)",
    "closeDocked": "rgb(51, 68, 136)",
    "closeFullscreen": "system-ui, sans-serif",
    "closeInline": "system-ui, sans-serif",
    "closeTopbar": "system-ui, sans-serif",
    "invitation": "system-ui, sans-serif",
    "mediumFont": "system-ui, sans-serif",
    "questionCustom": "system-ui, sans-serif",
    "questionCustomFull": "system-ui, sans-serif",
    "questionFree": "system-ui, sans-serif",
    "questionHeader": "0px",
    "questionMulti": "system-ui, sans-serif",
    "questionSingle": "system-ui, sans-serif",
    "smallFont": "system-ui, sans-serif",
    "submitButton": "system-ui, sans-serif",
    "thankYou": "system-ui, sans-serif",
  },
  "fontSizes": {
    "answerScale": "16px",
    "answerScaleMobi": "16px",
    "closeBottombar": "16px",
    "closeBottombarMobi": "16px",
    "closeCustom": "16px",
    "closeCustomMobi": "16px",
    "closeDefault": "rgb(51, 68, 136)",
    "closeDefaultMobi": "16px",
    "closeDocked": "rgb(51, 68, 136)",
    "closeDockedMobi": "16px",
    "closeFullscreen": "16px",
    "closeFullscreenMobi": "16px",
    "closeInline": "16px",
    "closeInlineMobi": "normal",
    "closeTopbar": "16px",
    "closeTopbarMobi": "rgb(51, 68, 136)",
    "invitation": "system-ui, sans-serif",
    "invitationMobi": "system-ui, sans-serif",
    "mediumFont": "16px",
    "mediumFontMobi": "system-ui, sans-serif",
    "questionCustom": "16px",
    "questionCustomFull": "16px",
    "questionCustomFullMobi": "16px",
    "questionCustomMobi": "16px",
    "questionFree": "16px",
    "questionFreeMobi": "16px",
    "questionHeader": "0px",
    "questionHeaderMobi": "0px",
    "questionMulti": "16px",
    "questionMultiMobi": "16px",
    "questionSingle": "16px",
    "questionSingleMobi": "16px",
    "smallFont": "16px",
    "smallFontMobi": "system-ui, sans-serif",
    "submitButton": "16px",
    "submitButtonMobi": "16px",
    "thankYou": "16px",
    "thankYouMobi": "16px",
  },
  "fontStyles": {
    "answerScale": "rgb(51, 68, 136)",
    "closeBottombar": "system-ui, sans-serif",
    "closeCustom": "rgb(51, 68, 136)",
    "closeDefault": "rgb(51, 68, 136)",
    "closeDocked": "rgb(51, 68, 136)",
    "closeFullscreen": "rgb(51, 68, 136)",
    "closeInline": "normal",
    "closeTopbar": "rgb(51, 68, 136)",
    "invitation": "system-ui, sans-serif",
    "mediumFont": "16px",
    "questionCustom": "normal",
    "questionCustomFull": "normal",
    "questionFree": "16px",
    "questionHeader": "0px",
    "questionMulti": "normal",
    "questionSingle": "normal",
    "smallFont": "system-ui, sans-serif",
    "submitButton": "normal",
    "thankYou": "normal",
  },
  "fontVariants": {
    "answerScale": "rgb(51, 68, 136)",
    "closeBottombar": "rgb(51, 68, 136)",
    "closeCustom": "rgb(51, 68, 136)",
    "closeDefault": "rgb(51, 68, 136)",
    "closeDocked": "rgb(51, 68, 136)",
    "closeFullscreen": "rgb(51, 68, 136)",
    "closeInline": "rgb(51, 68, 136)",
    "closeTopbar": "rgb(51, 68, 136)",
    "invitation": "system-ui, sans-serif",
    "mediumFont": "system-ui, sans-serif",
    "questionCustom": "normal",
    "questionCustomFull": "normal",
    "questionFree": "normal",
    "questionHeader": "0px",
    "questionMulti": "normal",
    "questionSingle": "normal",
    "smallFont": "system-ui, sans-serif",
    "submitButton": "16px",
    "thankYou": "normal",
  },
  "fontWeights": {
    "answerScale": "normal",
    "closeBottombar": "system-ui, sans-serif",
    "closeCustom": "normal",
    "closeDefault": "rgb(51, 68, 136)",
    "closeDocked": "rgb(51, 68, 136)",
    "closeFullscreen": "normal",
    "closeInline": "normal",
    "closeTopbar": "normal",
    "invitation": "system-ui, sans-serif",
    "mediumFont": "normal",
    "questionCustom": "normal",
    "questionCustomFull": "normal",
    "questionFree": "normal",
    "questionHeader": "0px",
    "questionMulti": "normal",
    "questionSingle": "normal",
    "smallFont": "system-ui, sans-serif",
    "submitButton": "normal",
    "thankYou": "normal",
  },
  "letterSpacings": {
    "answerScale": "normal",
    "closeBottombar": "normal",
    "closeCustom": "normal",
    "closeDefault": "normal",
    "closeDocked": "normal",
    "closeFullscreen": "normal",
    "closeInline": "normal",
    "closeTopbar": "normal",
    "mediumFont": "normal",
    "questionCustom": "normal",
    "questionCustomFull": "normal",
    "questionFree": "normal",
    "questionHeader": "normal",
    "questionMulti": "normal",
    "questionSingle": "normal",
    "smallFont": "normal",
    "submitButton": "normal",
    "thankYou": "normal",
  },
  "lineHeights": {
    "answerScale": "normal",
    "closeBottombar": "normal",
    "closeCustom": "normal",
    "closeDefault": "normal",
    "closeDocked": "normal",
    "closeFullscreen": "normal",
    "closeInline": "normal",
    "closeTopbar": "normal",
    "invitation": "normal",
    "mediumFont": "normal",
    "questionCustom": "normal",
    "questionCustomFull": "normal",
    "questionFree": "normal",
    "questionHeader": "0px",
    "questionMulti": "normal",
    "questionSingle": "normal",
    "smallFont": "normal",
    "submitButton": "normal",
    "thankYou": "normal",
  },
  "margins": {
    "branding": "normal",
    "closeBottombar": "system-ui, sans-serif",
    "closeCustom": "rgb(51, 68, 136)",
    "closeDefault": "rgb(51, 68, 136)",
    "closeDocked": "rgb(51, 68, 136)",
    "closeFullscreen": "normal",
    "closeInline": "normal",
    "closeTopbar": "normal",
    "contentContainer": "normal",
    "contentContainerCustom": null,
    "contentContainerCustomFull": null,
    "contentContainerFree": null,
    "contentContainerMulti": "rgb(238, 238, 238)",
    "contentContainerSingle": "normal",
    "imageSurveyLevel": "normal",
    "imageSurveyLevelMobi": "rgb(238, 238, 238)",
    "invitation": "normal",
    "invitationButton": "normal",
    "invitationButtonMobi": "rgb(238, 238, 238) none repeat scroll 0% 0% / auto padding-box border-box",
    "invitationMobi": "system-ui, sans-serif",
    "multiCheckboxOuter": "rgba(0, 0, 0, 0)",
    "questionDefault": "rgb(51, 68, 136)",
    "questionDefaultMobi": "0px",
    "radioButtonOuter": "normal",
    "singleChoiceAnswerAll": "rgb(238, 238, 238)",
    "submitButton": "normal",
    "submitButtonMobi": "normal",
    "thankYou": "system-ui, sans-serif",
    "widgetBottombar": "normal",
    "widgetInline": "normal",
  },
  "maxWidths": {
    "imageSurveyLevel": "normal",
    "imageSurveyLevelMobi": "rgb(238, 238, 238)",
    "invitationButton": "normal",
    "invitationButtonMobi": "rgb(238, 238, 238)",
    "submitButton": "none",
    "submitButtonMobi": "normal",
    "widgetDocked": "rgb(51, 68, 136)",
  },
  "minWidths": {
    "invitationButton": "normal",
    "invitationButtonMobi": null,
    "multiCheckboxOuter": "rgba(0, 0, 0, 0)",
    "radioButtonOuter": "normal",
    "submitButton": "16px",
    "submitButtonMobi": "normal",
  },
  "opacities": {
    "widgetCustom": "16px",
  },
  "paddings": {
    "answerScale": "0px",
    "answersContainer": "0px",
    "branding": "normal",
    "closeBottombar": "0px",
    "closeCustom": "0px",
    "closeDefault": "0px",
    "closeDocked": "0px",
    "closeFullscreen": "0px",
    "closeInline": "0px",
    "closeTopbar": "0px",
    "invitation": "0px",
    "invitationButton": "normal",
    "invitationButtonMobi": "0px",
    "invitationMobi": "system-ui, sans-serif",
    "questionDefault": "0px",
    "questionDefaultMobi": "0px",
    "singleChoiceAnswerAll": "0px",
    "submitButton": "normal",
    "submitButtonMobi": "0px",
    "thankYou": "0px",
    "widgetBottombar": "0px",
  },
  "textAlignments": {
    "answerScale": "normal",
    "closeBottombar": "normal",
    "closeCustom": "normal",
    "closeDefault": "rgb(51, 68, 136)",
    "closeDocked": "rgb(51, 68, 136)",
    "closeFullscreen": "normal",
    "closeInline": "normal",
    "closeTopbar": "normal",
    "invitation": "system-ui, sans-serif",
    "mediumFont": "system-ui, sans-serif",
    "questionCustom": "normal",
    "questionCustomFull": "normal",
    "questionFree": "normal",
    "questionHeader": "0px",
    "questionMulti": "normal",
    "questionSingle": "normal",
    "smallFont": "system-ui, sans-serif",
    "submitButton": "normal",
    "thankYou": "normal",
  },
  "textDecorations": {
    "answerScale": "normal",
    "closeBottombar": "normal",
    "closeBottombarHover": "normal",
    "closeCustom": "normal",
    "closeCustomHover": "normal",
    "closeDefault": "normal",
    "closeDefaultHover": "normal",
    "closeDocked": "normal",
    "closeDockedHover": "normal",
    "closeFullscreen": "normal",
    "closeFullscreenHover": "normal",
    "closeInline": "normal",
    "closeInlineHover": "normal",
    "closeTopbar": "normal",
    "closeTopbarHover": "normal",
    "invitation": "system-ui, sans-serif",
    "mediumFont": "normal",
    "mediumFontHover": "normal",
    "questionCustom": "normal",
    "questionCustomFull": "normal",
    "questionFree": "normal",
    "questionHeader": "0px",
    "questionMulti": "normal",
    "questionSingle": "normal",
    "smallFont": "normal",
    "smallFontHover": "normal",
    "submitButton": "normal",
    "submitButtonHover": "normal",
    "thankYou": "normal",
  },
  "textShadows": {
    "answerScale": "none",
    "closeBottombar": "system-ui, sans-serif",
    "closeCustom": "none",
    "closeDefault": "rgb(51, 68, 136)",
    "closeDocked": "rgb(51, 68, 136)",
    "closeFullscreen": "none",
    "closeInline": "none",
    "closeTopbar": "none",
    "invitation": "system-ui, sans-serif",
    "mediumFont": "none",
    "questionCustom": "none",
    "questionCustomFull": "none",
    "questionFree": "none",
    "questionHeader": "0px",
    "questionMulti": "none",
    "questionSingle": "normal",
    "smallFont": "none",
    "submitButton": "none",
    "thankYou": "none",
  },
  "textTransforms": {
    "answerScale": "rgb(51, 68, 136)",
    "closeBottombar": "system-ui, sans-serif",
    "closeCustom": "normal",
    "closeDefault": "rgb(51, 68, 136)",
    "closeDocked": "rgb(51, 68, 136)",
    "closeFullscreen": "normal",
    "closeInline": "normal",
    "closeTopbar": "normal",
    "invitation": "system-ui, sans-serif",
    "mediumFont": "16px",
    "questionCustom": "normal",
    "questionCustomFull": "normal",
    "questionFree": "16px",
    "questionHeader": "0px",
    "questionMulti": "normal",
    "questionSingle": "normal",
    "smallFont": "system-ui, sans-serif",
    "submitButton": "16px",
    "thankYou": "normal",
  },
  "transitions": {},
  "widths": {
    "invitation": "system-ui, sans-serif",
    "invitationButton": "normal",
    "questionDefault": "rgb(51, 68, 136)",
    "questionDefaultMobi": "0px",
    "radioButtonOuter": "normal",
    "submitButton": "16px",
    "submitButtonMobi": "normal",
    "thankYou": "system-ui, sans-serif",
    "thankYouMobi": "system-ui, sans-serif",
    "widgetDocked": "rgb(51, 68, 136)",
  },
  "zIndexes": {
    "contentContainerCustomFull": null,
    "widgetBottombar": "normal",
    "widgetDefault": "rgb(51, 68, 136)",
    "widgetDocked": "rgb(51, 68, 136)",
    "widgetFullscreen": "normal",
    "widgetInline": "normal",
    "widgetTopbar": "0px",
  },
}
`;

exports[`Public site extraction snapshots > web.dev can be mapped into Pulse tokens > web.dev-css-head 1`] = `
"#_pi_surveyWidgetContainer {
  --pi-color-primary: #202124;
  --pi-color-primary-hover: #0a0b0d;
  --pi-color-primary-active: #000001;
  --pi-color-secondary: #fff;
  --pi-color-text: #202124;
  --pi-"
`;

exports[`Public site extraction snapshots > web.dev can be mapped into Pulse tokens > web.dev-report-sample 1`] = `
{
  "backgroundColors.closeBottombar": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeBottombar",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeBottombarHover": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeBottombarHover",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeCustom": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeCustom",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeCustomHover": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeCustomHover",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeDefault": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeDefault",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeDefaultHover": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeDefaultHover",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeDocked": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeDocked",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeDockedHover": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeDockedHover",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeFullscreen": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeFullscreen",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeInline": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeInline",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeInlineHover": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeInlineHover",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.closeTopbar": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.closeTopbar",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.widgetBottombar": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.widgetBottombar",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.widgetContainer": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.widgetContainer",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.widgetCustom": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.widgetCustom",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.widgetDefault": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.widgetDefault",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.widgetDocked": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.widgetDocked",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.widgetFullscreen": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.widgetFullscreen",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.widgetInline": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.widgetInline",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
  "backgroundColors.widgetTopbar": {
    "confidence": 0.55,
    "evidence": [
      {
        "property": "background-color",
        "selector": "a[0]",
        "type": "computed",
        "value": "rgba(0, 0, 0, 0)",
      },
    ],
    "fallbackReason": "Matched via fuzzy name similarity",
    "id": "backgroundColors.widgetTopbar",
    "notes": null,
    "value": "rgba(0, 0, 0, 0)",
  },
}
`;

exports[`Public site extraction snapshots > web.dev can be mapped into Pulse tokens > web.dev-theme 1`] = `
{
  "backgroundColors": {
    "answersContainer": "rgba(0, 0, 0, 0)",
    "answersContainerCustom": "rgba(0, 0, 0, 0)",
    "answersContainerCustomFull": "rgba(0, 0, 0, 0)",
    "answersContainerFree": "rgba(0, 0, 0, 0)",
    "answersContainerMulti": "rgba(0, 0, 0, 0)",
    "answersContainerSingle": "rgba(0, 0, 0, 0)",
    "branding": "rgba(0, 0, 0, 0)",
    "brandingCustom": "rgba(0, 0, 0, 0)",
    "closeBottombar": "rgba(0, 0, 0, 0)",
    "closeBottombarHover": "rgba(0, 0, 0, 0)",
    "closeCustom": "rgba(0, 0, 0, 0)",
    "closeCustomHover": "rgba(0, 0, 0, 0)",
    "closeDefault": "rgba(0, 0, 0, 0)",
    "closeDefaultHover": "rgba(0, 0, 0, 0)",
    "closeDocked": "rgba(0, 0, 0, 0)",
    "closeDockedHover": "rgba(0, 0, 0, 0)",
    "closeFullscreen": "rgba(0, 0, 0, 0)",
    "closeFullscreenHover": "rgba(0, 0, 0, 0)",
    "closeInline": "rgba(0, 0, 0, 0)",
    "closeInlineHover": "rgba(0, 0, 0, 0)",
    "closeTopbar": "rgba(0, 0, 0, 0)",
    "closeTopbarHover": "rgba(0, 0, 0, 0)",
    "contentContainerCustom": "rgba(0, 0, 0, 0)",
    "contentContainerCustomFull": "rgba(0, 0, 0, 0)",
    "contentContainerCustomFullMobi": "rgba(0, 0, 0, 0)",
    "contentContainerCustomMobi": "rgba(0, 0, 0, 0)",
    "contentContainerDefault": "rgba(0, 0, 0, 0)",
    "contentContainerDefaultMobi": "rgba(0, 0, 0, 0)",
    "contentContainerFree": "rgba(0, 0, 0, 0)",
    "contentContainerFreeMobi": "rgba(0, 0, 0, 0)",
    "contentContainerMulti": "rgba(0, 0, 0, 0)",
    "contentContainerMultiMobi": "rgba(0, 0, 0, 0)",
    "contentContainerSingle": "rgba(0, 0, 0, 0)",
    "contentContainerSingleMobi": "rgba(0, 0, 0, 0)",
    "freeTextQuestionFieldContainer": "rgba(0, 0, 0, 0)",
    "invitation": "rgba(0, 0, 0, 0)",
    "multiCheckboxOuter": "rgba(0, 0, 0, 0)",
    "multiCheckboxOuterHover": "rgba(0, 0, 0, 0)",
    "multiChoiceAnswerAll": "rgba(0, 0, 0, 0)",
    "multiChoiceAnswerAllHover": "rgba(0, 0, 0, 0)",
    "questionCustom": "rgba(0, 0, 0, 0)",
    "questionCustomFull": "rgba(0, 0, 0, 0)",
    "questionCustomFullMobi": "rgba(0, 0, 0, 0)",
    "questionCustomMobi": "rgba(0, 0, 0, 0)",
    "questionFree": "rgba(0, 0, 0, 0)",
    "questionFreeMobi": "rgba(0, 0, 0, 0)",
    "questionMulti": "rgba(0, 0, 0, 0)",
    "questionMultiMobi": "rgba(0, 0, 0, 0)",
    "questionSingle": "rgba(0, 0, 0, 0)",
    "questionSingleMobi": "rgba(0, 0, 0, 0)",
    "radioButtonInnerHover": "rgba(0, 0, 0, 0)",
    "radioButtonOuter": "rgba(0, 0, 0, 0)",
    "radioButtonOuterHover": "rgba(0, 0, 0, 0)",
    "singleChoiceAnswerAll": "rgba(0, 0, 0, 0)",
    "singleChoiceAnswerAllHover": "rgba(0, 0, 0, 0)",
    "submitButton": "rgba(0, 0, 0, 0)",
    "submitButtonHover": "rgba(0, 0, 0, 0)",
    "thankYou": "rgba(0, 0, 0, 0)",
    "widgetBottombar": "rgba(0, 0, 0, 0)",
    "widgetContainer": "rgba(0, 0, 0, 0)",
    "widgetCustom": "rgba(0, 0, 0, 0)",
    "widgetDefault": "rgba(0, 0, 0, 0)",
    "widgetDocked": "rgba(0, 0, 0, 0)",
    "widgetFullscreen": "rgba(0, 0, 0, 0)",
    "widgetInline": "rgba(0, 0, 0, 0)",
    "widgetTopbar": "rgba(0, 0, 0, 0)",
  },
  "borderColors": {
    "multiCheckboxCheckmark": "rgba(0, 0, 0, 0)",
    "multiCheckboxCheckmarkHover": "25px",
    "multiCheckboxOuter": "25px",
    "multiCheckboxOuterHover": "25px",
    "multiChoiceAnswerEach": "25px",
    "multiChoiceAnswerEachHover": "25px",
    "radioButtonInnerHover": "25px",
    "radioButtonOuter": "25px",
    "radioButtonOuterHover": "25px",
    "singleChoiceAnswerEach": "25px",
    "singleChoiceAnswerEachHover": "25px",
    "submitButton": "25px",
    "submitButtonHover": "36px",
    "widgetBottombar": "normal",
    "widgetContainer": "normal",
    "widgetCustom": "25px",
    "widgetDefault": "25px",
    "widgetDocked": "25px",
    "widgetDockedMobi": "normal",
    "widgetFullscreen": "25px",
    "widgetInline": "40px",
    "widgetTopbar": "0px",
    "widgetTopbarMobi": "normal",
  },
  "borderRadiuses": {
    "closeBottombar": "0px",
    "closeCustom": "0px",
    "closeDefault": "0px",
    "closeDocked": "0px",
    "closeFullscreen": "0px",
    "closeInline": "0px",
    "closeTopbar": "25px",
    "multiCheckboxCheckmark": "0px",
    "multiCheckboxOuter": "0px",
    "multiChoiceAnswerEach": "0px",
    "multiChoiceAnswerEachHover": "0px",
    "singleChoiceAnswerEach": "0px",
    "singleChoiceAnswerEachHover": "0px",
    "submitButton": "0px",
    "widgetBottombar": "0px",
    "widgetContainer": "0px",
    "widgetCustom": "0px",
    "widgetDefault": "0px",
    "widgetDocked": "0px",
    "widgetDockedMobi": "0px",
    "widgetFullscreen": "0px",
    "widgetInline": "0px",
    "widgetTopbar": "0px",
    "widgetTopbarMobi": "0px",
  },
  "borderStyles": {
    "multiCheckboxCheckmark": "rgba(0, 0, 0, 0)",
    "multiCheckboxOuter": "normal",
    "multiChoiceAnswerEach": "normal",
    "multiChoiceAnswerEachHover": "rgb(32, 33, 36)",
    "radioButtonInnerHover": "25px",
    "radioButtonOuter": "25px",
    "singleChoiceAnswerEach": "rgb(32, 33, 36)",
    "singleChoiceAnswerEachHover": "rgb(32, 33, 36)",
    "submitButton": "0px",
    "widgetBottombar": "normal",
    "widgetContainer": "normal",
    "widgetCustom": "rgb(32, 33, 36)",
    "widgetDefault": "rgb(32, 33, 36)",
    "widgetDocked": "rgb(32, 33, 36)",
    "widgetDockedMobi": "normal",
    "widgetFullscreen": "36px",
    "widgetInline": "40px",
    "widgetTopbar": "0px",
    "widgetTopbarMobi": "normal",
  },
  "borderWidths": {
    "multiCheckboxCheckmark": "rgba(0, 0, 0, 0)",
    "multiCheckboxOuter": "normal",
    "multiChoiceAnswerAll": "normal",
    "multiChoiceAnswerAllHover": "0px",
    "multiChoiceAnswerEach": "normal",
    "multiChoiceAnswerEachHover": "0px",
    "radioButtonInnerHover": "25px",
    "radioButtonOuter": "25px",
    "singleChoiceAnswerAll": "0px",
    "singleChoiceAnswerAllHover": "0px",
    "singleChoiceAnswerEach": "0px",
    "singleChoiceAnswerEachHover": "0px",
    "submitButton": "0px",
    "widgetBottombar": "normal",
    "widgetContainer": "normal",
    "widgetCustom": "0px",
    "widgetDefault": "0px",
    "widgetDocked": "0px",
    "widgetDockedMobi": "normal",
    "widgetFullscreen": "36px",
    "widgetInline": "40px",
    "widgetTopbar": "0px",
    "widgetTopbarMobi": "normal",
  },
  "boxShadows": {
    "widgetBottombar": "none",
    "widgetDocked": "none",
    "widgetFullscreen": "none",
    "widgetInline": "none",
    "widgetTopbar": "none",
  },
  "cursors": {},
  "fontColors": {
    "answerScale": "normal",
    "closeBottombar": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "closeBottombarHover": "normal",
    "closeCustom": "rgb(32, 33, 36)",
    "closeCustomHover": "normal",
    "closeDefault": "rgba(0, 0, 0, 0)",
    "closeDefaultHover": "25px",
    "closeDocked": "rgb(32, 33, 36)",
    "closeDockedHover": "normal",
    "closeFullscreen": "rgb(32, 33, 36)",
    "closeFullscreenHover": "normal",
    "closeInline": "20px",
    "closeInlineHover": "normal",
    "closeTopbar": "rgb(32, 33, 36)",
    "closeTopbarHover": "normal",
    "invitation": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "mediumFont": "rgb(32, 33, 36)",
    "mediumFontHover": "24px",
    "questionCustom": "rgb(32, 33, 36)",
    "questionCustomFull": "rgb(32, 33, 36)",
    "questionFree": "rgb(32, 33, 36)",
    "questionHeader": "25px",
    "questionMulti": "rgb(32, 33, 36)",
    "questionSingle": "rgb(32, 33, 36)",
    "smallFont": "rgb(32, 33, 36)",
    "smallFontHover": "rgb(32, 33, 36)",
    "submitButton": "normal",
    "submitButtonHover": "36px",
    "thankYou": "rgb(32, 33, 36)",
  },
  "fontFamilies": {
    "answerScale": ""Material Icons"",
    "closeBottombar": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "closeCustom": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "closeDefault": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "closeDocked": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "closeFullscreen": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "closeInline": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "closeTopbar": "rgb(32, 33, 36)",
    "invitation": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "mediumFont": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "questionCustom": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "questionCustomFull": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "questionFree": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "questionHeader": "25px",
    "questionMulti": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "questionSingle": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "smallFont": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "submitButton": ""Material Icons"",
    "thankYou": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
  },
  "fontSizes": {
    "answerScale": "24px",
    "answerScaleMobi": "16px",
    "closeBottombar": "16px",
    "closeBottombarMobi": "normal",
    "closeCustom": "16px",
    "closeCustomMobi": "16px",
    "closeDefault": "16px",
    "closeDefaultMobi": "16px",
    "closeDocked": "16px",
    "closeDockedMobi": "16px",
    "closeFullscreen": "16px",
    "closeFullscreenMobi": "normal",
    "closeInline": "16px",
    "closeInlineMobi": "normal",
    "closeTopbar": "normal",
    "closeTopbarMobi": "0.5px",
    "invitation": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "invitationMobi": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "mediumFont": "16px",
    "mediumFontMobi": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "questionCustom": "16px",
    "questionCustomFull": "16px",
    "questionCustomFullMobi": "36px",
    "questionCustomMobi": "36px",
    "questionFree": "16px",
    "questionFreeMobi": "36px",
    "questionHeader": "25px",
    "questionHeaderMobi": "25px",
    "questionMulti": "16px",
    "questionMultiMobi": "36px",
    "questionSingle": "16px",
    "questionSingleMobi": "36px",
    "smallFont": "16px",
    "smallFontMobi": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "submitButton": "24px",
    "submitButtonMobi": ""Material Icons"",
    "thankYou": "16px",
    "thankYouMobi": "36px",
  },
  "fontStyles": {
    "answerScale": "normal",
    "closeBottombar": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "closeCustom": "rgb(32, 33, 36)",
    "closeDefault": "rgb(32, 33, 36)",
    "closeDocked": "rgba(0, 0, 0, 0) none repeat scroll 0% 0% / auto padding-box border-box",
    "closeFullscreen": "-0.32px",
    "closeInline": "20px",
    "closeTopbar": "rgb(32, 33, 36)",
    "invitation": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "mediumFont": ""Material Icons"",
    "questionCustom": "24px",
    "questionCustomFull": ""Material Icons"",
    "questionFree": "rgb(32, 33, 36)",
    "questionHeader": "25px",
    "questionMulti": "rgb(32, 33, 36)",
    "questionSingle": "24px",
    "smallFont": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "submitButton": "0px",
    "thankYou": ""Material Icons"",
  },
  "fontVariants": {
    "answerScale": "normal",
    "closeBottombar": "rgb(32, 33, 36)",
    "closeCustom": "rgb(32, 33, 36)",
    "closeDefault": "rgb(32, 33, 36)",
    "closeDocked": "rgb(32, 33, 36)",
    "closeFullscreen": "rgb(32, 33, 36)",
    "closeInline": "rgb(32, 33, 36)",
    "closeTopbar": "rgb(32, 33, 36)",
    "invitation": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "mediumFont": "25px",
    "questionCustom": "24px",
    "questionCustomFull": ""Material Icons"",
    "questionFree": "rgb(32, 33, 36)",
    "questionHeader": "25px",
    "questionMulti": "-0.32px",
    "questionSingle": "24px",
    "smallFont": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "submitButton": "normal",
    "thankYou": "rgba(0, 0, 0, 0)",
  },
  "fontWeights": {
    "answerScale": "36px",
    "closeBottombar": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "closeCustom": "20px",
    "closeDefault": "20px",
    "closeDocked": "20px",
    "closeFullscreen": "20px",
    "closeInline": "20px",
    "closeTopbar": "rgb(32, 33, 36)",
    "invitation": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "mediumFont": "20px",
    "questionCustom": "40px",
    "questionCustomFull": "40px",
    "questionFree": "40px",
    "questionHeader": "25px",
    "questionMulti": "40px",
    "questionSingle": "40px",
    "smallFont": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "submitButton": "36px",
    "thankYou": "40px",
  },
  "letterSpacings": {
    "answerScale": "0.5px",
    "closeBottombar": "0.5px",
    "closeCustom": "0.5px",
    "closeDefault": "0.5px",
    "closeDocked": "0.5px",
    "closeFullscreen": "0.5px",
    "closeInline": "0.5px",
    "closeTopbar": "0.5px",
    "mediumFont": "0.5px",
    "questionCustom": "0.5px",
    "questionCustomFull": "0.5px",
    "questionFree": "0.5px",
    "questionHeader": "0.5px",
    "questionMulti": "0.5px",
    "questionSingle": "0.5px",
    "smallFont": "0.5px",
    "submitButton": "0.5px",
    "thankYou": "0.5px",
  },
  "lineHeights": {
    "answerScale": "40px",
    "closeBottombar": "40px",
    "closeCustom": "40px",
    "closeDefault": "40px",
    "closeDocked": "40px",
    "closeFullscreen": "40px",
    "closeInline": "40px",
    "closeTopbar": "40px",
    "invitation": "40px",
    "mediumFont": "40px",
    "questionCustom": "40px",
    "questionCustomFull": "40px",
    "questionFree": "40px",
    "questionHeader": "25px",
    "questionMulti": "40px",
    "questionSingle": "40px",
    "smallFont": "40px",
    "submitButton": "40px",
    "thankYou": "40px",
  },
  "margins": {
    "branding": "normal",
    "closeBottombar": "rgba(0, 0, 0, 0)",
    "closeCustom": "36px",
    "closeDefault": "normal",
    "closeDocked": "rgba(0, 0, 0, 0)",
    "closeFullscreen": "-0.32px",
    "closeInline": "normal",
    "closeTopbar": "rgb(32, 33, 36)",
    "contentContainer": "normal",
    "contentContainerCustom": "rgba(0, 0, 0, 0)",
    "contentContainerCustomFull": "normal",
    "contentContainerFree": "normal",
    "contentContainerMulti": "rgba(0, 0, 0, 0)",
    "contentContainerSingle": "normal",
    "imageSurveyLevel": "normal",
    "imageSurveyLevelMobi": "rgb(255, 255, 255)",
    "invitation": "normal",
    "invitationButton": ""Material Icons"",
    "invitationButtonMobi": ""Material Icons"",
    "invitationMobi": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "multiCheckboxOuter": "rgba(0, 0, 0, 0)",
    "questionDefault": "24px",
    "questionDefaultMobi": "25px",
    "radioButtonOuter": "25px",
    "singleChoiceAnswerAll": "rgba(0, 0, 0, 0)",
    "submitButton": "0px",
    "submitButtonMobi": ""Material Icons"",
    "thankYou": "rgba(0, 0, 0, 0) none repeat scroll 0px 50% / auto padding-box border-box",
    "widgetBottombar": "normal",
    "widgetInline": "40px",
  },
  "maxWidths": {
    "imageSurveyLevel": "normal",
    "imageSurveyLevelMobi": "rgb(255, 255, 255)",
    "invitationButton": ""Material Icons"",
    "invitationButtonMobi": "none",
    "submitButton": "none",
    "submitButtonMobi": ""Material Icons"",
    "widgetDocked": "16px",
  },
  "minWidths": {
    "invitationButton": ""Material Icons"",
    "invitationButtonMobi": "rgba(0, 0, 0, 0)",
    "multiCheckboxOuter": "normal",
    "radioButtonOuter": "25px",
    "submitButton": "none",
    "submitButtonMobi": ""Material Icons"",
  },
  "opacities": {
    "widgetCustom": "normal",
  },
  "paddings": {
    "answerScale": "12px 40px",
    "answersContainer": "12px 40px",
    "branding": "normal",
    "closeBottombar": "12px 40px",
    "closeCustom": "normal",
    "closeDefault": "12px 40px",
    "closeDocked": "12px 40px",
    "closeFullscreen": "12px 40px",
    "closeInline": "12px 40px",
    "closeTopbar": "normal",
    "invitation": "12px 40px",
    "invitationButton": ""Material Icons"",
    "invitationButtonMobi": "12px 40px",
    "invitationMobi": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "questionDefault": "12px 40px",
    "questionDefaultMobi": "25px",
    "singleChoiceAnswerAll": "12px 40px",
    "submitButton": "normal",
    "submitButtonMobi": ""Material Icons"",
    "thankYou": "12px 40px",
    "widgetBottombar": "12px 40px",
  },
  "textAlignments": {
    "answerScale": "-0.32px",
    "closeBottombar": "-0.32px",
    "closeCustom": "-0.32px",
    "closeDefault": "-0.32px",
    "closeDocked": "-0.32px",
    "closeFullscreen": "-0.32px",
    "closeInline": "-0.32px",
    "closeTopbar": "rgb(32, 33, 36)",
    "invitation": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "mediumFont": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "questionCustom": "-0.32px",
    "questionCustomFull": "-0.32px",
    "questionFree": "-0.32px",
    "questionHeader": "25px",
    "questionMulti": "-0.32px",
    "questionSingle": "-0.32px",
    "smallFont": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "submitButton": ""Material Icons"",
    "thankYou": "-0.32px",
  },
  "textDecorations": {
    "answerScale": "normal",
    "closeBottombar": "normal",
    "closeBottombarHover": "normal",
    "closeCustom": "normal",
    "closeCustomHover": "normal",
    "closeDefault": "normal",
    "closeDefaultHover": "normal",
    "closeDocked": "normal",
    "closeDockedHover": "normal",
    "closeFullscreen": "normal",
    "closeFullscreenHover": "normal",
    "closeInline": "normal",
    "closeInlineHover": "normal",
    "closeTopbar": "normal",
    "closeTopbarHover": "normal",
    "invitation": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "mediumFont": "normal",
    "mediumFontHover": "24px",
    "questionCustom": "normal",
    "questionCustomFull": "normal",
    "questionFree": "normal",
    "questionHeader": "25px",
    "questionMulti": "normal",
    "questionSingle": "normal",
    "smallFont": "normal",
    "smallFontHover": "normal",
    "submitButton": "rgba(0, 0, 0, 0)",
    "submitButtonHover": "36px",
    "thankYou": "normal",
  },
  "textShadows": {
    "answerScale": "none",
    "closeBottombar": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "closeCustom": "none",
    "closeDefault": "none",
    "closeDocked": "none",
    "closeFullscreen": "none",
    "closeInline": "none",
    "closeTopbar": "rgb(32, 33, 36)",
    "invitation": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "mediumFont": "none",
    "questionCustom": "none",
    "questionCustomFull": "none",
    "questionFree": "none",
    "questionHeader": "25px",
    "questionMulti": "none",
    "questionSingle": "24px",
    "smallFont": "none",
    "submitButton": "none",
    "thankYou": "none",
  },
  "textTransforms": {
    "answerScale": "normal",
    "closeBottombar": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "closeCustom": "0.5px",
    "closeDefault": "0.5px",
    "closeDocked": "0.5px",
    "closeFullscreen": "0.5px",
    "closeInline": "20px",
    "closeTopbar": "rgb(32, 33, 36)",
    "invitation": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "mediumFont": "16px",
    "questionCustom": "24px",
    "questionCustomFull": ""Material Icons"",
    "questionFree": "rgb(32, 33, 36)",
    "questionHeader": "25px",
    "questionMulti": ""Material Icons"",
    "questionSingle": "24px",
    "smallFont": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "submitButton": "0px",
    "thankYou": ""Material Icons"",
  },
  "transitions": {},
  "widths": {
    "invitation": ""Google Sans", "Noto Sans", "Noto Sans JP", "Noto Sans KR", "Noto Naskh Arabic", "Noto Sans Thai", "Noto Sans Hebrew", "Noto Sans Bengali", sans-serif",
    "invitationButton": ""Material Icons"",
    "questionDefault": "24px",
    "questionDefaultMobi": "25px",
    "radioButtonOuter": "25px",
    "submitButton": "0px",
    "submitButtonMobi": ""Material Icons"",
    "thankYou": "0px",
    "thankYouMobi": "25px",
    "widgetDocked": "16px",
  },
  "zIndexes": {
    "contentContainerCustomFull": "rgba(0, 0, 0, 0)",
    "widgetBottombar": "normal",
    "widgetDefault": "20px",
    "widgetDocked": "16px",
    "widgetFullscreen": "36px",
    "widgetInline": "40px",
    "widgetTopbar": "0px",
  },
}
`;
